# llm-server

./: .env.example  .gitignore  Dockerfile  README.md  curl.sh  docker-compose.yml  pyproject.toml  up.sh
app/: main.py
